estilizando os botoes

--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -1,2 +1,15 @@
-<p>produtos works!</p>
-<button (click)="deslogar()" router-link-active>Sair</button>
+<div class="container">
+  <div>
+    <span>produtos works!</span>
+  </div>
+  <div>
+    <button
+      mat-raised-button
+      (click)="deslogar()"
+      router-link-active
+      color="warn"
+    >
+      Sair
+    </button>
+  </div>
+</div>
