--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
-<p>login works!</p>
-<div>
-  <button (click)="logar()">Logar</button>
+<div class="container">
+  <span>login works!</span>
+  <button mat-raised-button (click)="logar()" color="primary">Logar</button>
   @if(logado == true){
   <span style="color: green; padding: 30px">Logado</span>
   }
