--- a/src/app/components/produtos/produtos.component.html
+++ b/src/app/components/produtos/produtos.component.html
@@ -3,13 +3,6 @@
     <span>produtos works!</span>
   </div>
   <div>
-    <button
-      mat-raised-button
-      (click)="deslogar()"
-      router-link-active
-      color="warn"
-    >
-      Sair
-    </button>
+    <button mat-fab (click)="deslogar()" color="warn">Deslogar</button>
   </div>
 </div>
